--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Provision and manage virtual machines from cloud providers
 
+Vimma is distributed under the BSD 3-clause license, see the file COPYING.
+
 The DOC file has some explanations about the structure & features.
 
 
