--- a/README
+++ b/README
@@ -12,8 +12,10 @@ cp config/local_settings.py.example config/local_settings.py
 # choose a DB (SQLite3 or PostgreSQL)
 
 cp config/secrets.py.template config/secrets.py
-# set up AWS credentials for dev testing
 # set the FUM_API_TOKEN used to retrieve Futurice users
+
+cp config/dev_secrets.py.template config/dev_secrets.py
+# set up AWS credentials for dev testing
 
 
 Create a Python3 virtual enviroment and use it for most commands.
@@ -43,7 +45,8 @@ PYTHONPATH=config ./vimmasite/manage.py test vimma --settings=test_settings
 mkdir -p vimmasite/static
 PYTHONPATH=config ./vimmasite/manage.py collectstatic --noinput --clear --link
 
-PYTHONPATH=config ./scripts/db-reset.py	# reset DB and migrations, create dummy data
+# reset DB, create all permissions and dummy data
+PYTHONPATH=config ./scripts/dev-db-reset.py
 
 rabbitmq-server
 PYTHONPATH=config ./scripts/worker.py	# start celery worker
