document how to add Providers and VMConfigs from the Admin interface

--- a/README
+++ b/README
@@ -3,6 +3,7 @@ Provision and manage virtual machines from cloud providers (AWS)
 Vimma is distributed under the BSD 3-clause license, see the file COPYING.
 
 The deploy/DEPLOY file describes deploying to a production server.
+The CONFIG file describes adding VM Providers and Configurations.
 The DOC file has some explanations about the structure & features.
 
 
